--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.8.0",
+    "@vue-stripe/vue-stripe": "^4.5.0",
     "axios": "^1.11.0",
     "vue": "^3.2.0",
     "vue-router": "^4.5.1"
